cmake_minimum_required(VERSION 3.10)
project(tp)
set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp -I/opt/homebrew/Cellar/libomp/18.1.7/include")
set(OpenMP_C_LIB_NAMES "omp")
include_directories(/opt/homebrew/Cellar/libomp/18.1.7/include)
find_package(OpenMP)
if (OPENMP_FOUND)
set (CMAKE_C_COMPILER "/opt/homebrew/opt/llvm/bin/clang")
    set (CMAKE_CXX_COMPILER "/opt/homebrew/opt/llvm/bin/clang++")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")

endif()
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( main main.cpp ocv_utils.cpp ocv_utils.hpp)
target_link_libraries( main ${OpenCV_LIBS} )
target_link_libraries(main ${OpenMP_CXX_LIBRARIES})